# curves

./: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
art-engine/: Cargo.toml  LICENSE_MIT
art-engine/src/: lib.rs
art-engine/src/core/: buffer.rs  compute_material.rs  material.rs  mod.rs  shader.rs
src/: App.svelte  app.css
src/assets/art-engine/: art_engine.d.ts  art_engine.js  art_engine_bg.js  art_engine_bg.wasm  art_engine_bg.wasm.d.ts  package.json
src/assets/shaders/: quad.glsl
src/lib/: Slider.svelte  circle.ts
